syntax = "proto3";

option csharp_namespace = "DiscountService.Protos";

package  ProductRPC;

service DiscountRPCService{
	rpc GetDiscount(DiscountRequest) returns (DiscountModel);
	rpc GetProductDiscount(DiscountProductRequest) returns (ProductModel);
}
message DiscountRequest
{
	string userId =1;
}

message DiscountProductRequest
{
	string userId =1;
	string productId =2;
}


message DiscountModel
{
	float pct = 1;
	float value = 2;
	float finalPrice = 3;
}

message ProductModel
{
		string id =1;
		float price =2;
		string title=3;
		string description = 4;
		DiscountModel discount = 5;
}